# ddgtk

./: .SRCINFO  PKGBUILD  README.md  ddgtk.glade  ddgtk.py  meson.build
data/: meson.build  org.gnome.Ddgtk.appdata.xml.in  org.gnome.Ddgtk.desktop.in  org.gnome.Ddgtk.gschema.xml
po/: POTFILES  meson.build
src/: ddgtk.gresource.xml  ddgtk.in  main.py  meson.build  window.ui
